<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SexiFit</string>
    <string name="no_notes">Menu > Download Workout</string>
    <string name="menu_insert">Login</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Weight</string>
    <string name="body">Reps</string>
    <string name="confirm">Submit</string>
    <string name="edit_note">Edit Note</string>
    <string name="exercise_label">Exercise</string>
    <string name="menu_get_new_notes">Download Workout</string>
    <string name="menu_get">Get Workout</string>
    <string name="menu_archive_new_notes">Upload Results</string>
    <string name="menu_submit_new_notes">Submit New Notes</string>
    <string name="menu_post_new_notes">Upload Results</string>
    <string name="menu_delete_all_notes">Clear Results</string>
   	<string name="menu_next_note">Next Note</string>
	<string name="menu_previous_note">Prev Note</string>
	<string name="spinner_exercise_label">Exercise</string>
	<string name="spinner_exercise_prompt">Select Exercise</string>
	<integer-array name="reps_int_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
	</integer-array>
	<string-array name="reps_string_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <integer-array name="weights_int_array">
    	<item>0</item>
        <item>5</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
		<item>25</item>
		<item>30</item>
		<item>35</item>
		<item>40</item>
		<item>45</item>
		<item>50</item>
		<item>55</item>
		<item>60</item>
		<item>65</item>
		<item>70</item>
		<item>75</item>
		<item>80</item>
		<item>85</item>
		<item>90</item>
		<item>95</item>
		<item>100</item>
		<item>105</item>
		<item>110</item>
		<item>115</item>
		<item>120</item>
		<item>125</item>
		<item>130</item>
		<item>135</item>
		<item>140</item>
		<item>145</item>
		<item>150</item>
		<item>155</item>
		<item>160</item>
		<item>165</item>
		<item>170</item>
		<item>175</item>
		<item>180</item>
		<item>185</item>
		<item>190</item>
		<item>195</item>
		<item>200</item>
		<item>205</item>
		<item>210</item>
		<item>215</item>
		<item>220</item>
		<item>225</item>
		<item>230</item>
		<item>235</item>
		<item>240</item>
		<item>245</item>
		<item>250</item>
		<item>255</item>
		<item>260</item>
		<item>265</item>
		<item>270</item>
		<item>275</item>
		<item>280</item>
		<item>285</item>
		<item>290</item>
		<item>295</item>
		<item>300</item>
		<item>305</item>
		<item>310</item>
		<item>315</item>
		<item>320</item>
		<item>325</item>
		<item>330</item>
		<item>335</item>
		<item>340</item>
		<item>345</item>
		<item>350</item>
		<item>355</item>
		<item>360</item>
		<item>365</item>
		<item>370</item>
		<item>375</item>
		<item>380</item>
		<item>385</item>
		<item>390</item>
		<item>395</item>
		<item>400</item>
		<item>405</item>
		<item>410</item>
		<item>415</item>
		<item>420</item>
		<item>425</item>
		<item>430</item>
		<item>435</item>
		<item>440</item>
		<item>445</item>
		<item>450</item>
		<item>455</item>
		<item>460</item>
		<item>465</item>
		<item>470</item>
		<item>475</item>
		<item>480</item>
		<item>485</item>
		<item>490</item>
		<item>495</item>
		<item>500</item>
		<item>505</item>
		<item>510</item>
		<item>515</item>
		<item>520</item>
		<item>525</item>
		<item>530</item>
		<item>535</item>
		<item>540</item>
		<item>545</item>
		<item>550</item>
		<item>555</item>
		<item>560</item>
		<item>565</item>
		<item>570</item>
		<item>575</item>
		<item>580</item>
		<item>585</item>
		<item>590</item>
		<item>595</item>
		<item>600</item>
		<item>605</item>
		<item>610</item>
		<item>615</item>
		<item>620</item>
		<item>625</item>
		<item>630</item>
		<item>635</item>
		<item>640</item>
		<item>645</item>
		<item>650</item>
		<item>655</item>
		<item>660</item>
		<item>665</item>
		<item>670</item>
		<item>675</item>
		<item>680</item>
		<item>685</item>
		<item>690</item>
		<item>695</item>
		<item>700</item>
		<item>705</item>
		<item>710</item>
		<item>715</item>
		<item>720</item>
		<item>725</item>
		<item>730</item>
		<item>735</item>
		<item>740</item>
		<item>745</item>
		<item>750</item>
		<item>755</item>
		<item>760</item>
		<item>765</item>
		<item>770</item>
		<item>775</item>
		<item>780</item>
		<item>785</item>
		<item>790</item>
		<item>795</item>
		<item>800</item>
		<item>805</item>
		<item>810</item>
		<item>815</item>
		<item>820</item>
		<item>825</item>
		<item>830</item>
		<item>835</item>
		<item>840</item>
		<item>845</item>
		<item>850</item>
		<item>855</item>
		<item>860</item>
		<item>865</item>
		<item>870</item>
		<item>875</item>
		<item>880</item>
		<item>885</item>
		<item>890</item>
		<item>895</item>
		<item>900</item>
		<item>905</item>
		<item>910</item>
		<item>915</item>
		<item>920</item>
		<item>925</item>
		<item>930</item>
		<item>935</item>
		<item>940</item>
		<item>945</item>
		<item>950</item>
		<item>955</item>
		<item>960</item>
		<item>965</item>
		<item>970</item>
		<item>975</item>
		<item>980</item>
		<item>985</item>
		<item>990</item>
		<item>995</item>
		<item>1000</item>
	</integer-array>
	<string-array name="weights_string_array">
        <item>0</item>
        <item>5</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
		<item>25</item>
		<item>30</item>
		<item>35</item>
		<item>40</item>
		<item>45</item>
		<item>50</item>
		<item>55</item>
		<item>60</item>
		<item>65</item>
		<item>70</item>
		<item>75</item>
		<item>80</item>
		<item>85</item>
		<item>90</item>
		<item>95</item>
		<item>100</item>
		<item>105</item>
		<item>110</item>
		<item>115</item>
		<item>120</item>
		<item>125</item>
		<item>130</item>
		<item>135</item>
		<item>140</item>
		<item>145</item>
		<item>150</item>
		<item>155</item>
		<item>160</item>
		<item>165</item>
		<item>170</item>
		<item>175</item>
		<item>180</item>
		<item>185</item>
		<item>190</item>
		<item>195</item>
		<item>200</item>
		<item>205</item>
		<item>210</item>
		<item>215</item>
		<item>220</item>
		<item>225</item>
		<item>230</item>
		<item>235</item>
		<item>240</item>
		<item>245</item>
		<item>250</item>
		<item>255</item>
		<item>260</item>
		<item>265</item>
		<item>270</item>
		<item>275</item>
		<item>280</item>
		<item>285</item>
		<item>290</item>
		<item>295</item>
		<item>300</item>
		<item>305</item>
		<item>310</item>
		<item>315</item>
		<item>320</item>
		<item>325</item>
		<item>330</item>
		<item>335</item>
		<item>340</item>
		<item>345</item>
		<item>350</item>
		<item>355</item>
		<item>360</item>
		<item>365</item>
		<item>370</item>
		<item>375</item>
		<item>380</item>
		<item>385</item>
		<item>390</item>
		<item>395</item>
		<item>400</item>
		<item>405</item>
		<item>410</item>
		<item>415</item>
		<item>420</item>
		<item>425</item>
		<item>430</item>
		<item>435</item>
		<item>440</item>
		<item>445</item>
		<item>450</item>
		<item>455</item>
		<item>460</item>
		<item>465</item>
		<item>470</item>
		<item>475</item>
		<item>480</item>
		<item>485</item>
		<item>490</item>
		<item>495</item>
		<item>500</item>
		<item>505</item>
		<item>510</item>
		<item>515</item>
		<item>520</item>
		<item>525</item>
		<item>530</item>
		<item>535</item>
		<item>540</item>
		<item>545</item>
		<item>550</item>
		<item>555</item>
		<item>560</item>
		<item>565</item>
		<item>570</item>
		<item>575</item>
		<item>580</item>
		<item>585</item>
		<item>590</item>
		<item>595</item>
		<item>600</item>
		<item>605</item>
		<item>610</item>
		<item>615</item>
		<item>620</item>
		<item>625</item>
		<item>630</item>
		<item>635</item>
		<item>640</item>
		<item>645</item>
		<item>650</item>
		<item>655</item>
		<item>660</item>
		<item>665</item>
		<item>670</item>
		<item>675</item>
		<item>680</item>
		<item>685</item>
		<item>690</item>
		<item>695</item>
		<item>700</item>
		<item>705</item>
		<item>710</item>
		<item>715</item>
		<item>720</item>
		<item>725</item>
		<item>730</item>
		<item>735</item>
		<item>740</item>
		<item>745</item>
		<item>750</item>
		<item>755</item>
		<item>760</item>
		<item>765</item>
		<item>770</item>
		<item>775</item>
		<item>780</item>
		<item>785</item>
		<item>790</item>
		<item>795</item>
		<item>800</item>
		<item>805</item>
		<item>810</item>
		<item>815</item>
		<item>820</item>
		<item>825</item>
		<item>830</item>
		<item>835</item>
		<item>840</item>
		<item>845</item>
		<item>850</item>
		<item>855</item>
		<item>860</item>
		<item>865</item>
		<item>870</item>
		<item>875</item>
		<item>880</item>
		<item>885</item>
		<item>890</item>
		<item>895</item>
		<item>900</item>
		<item>905</item>
		<item>910</item>
		<item>915</item>
		<item>920</item>
		<item>925</item>
		<item>930</item>
		<item>935</item>
		<item>940</item>
		<item>945</item>
		<item>950</item>
		<item>955</item>
		<item>960</item>
		<item>965</item>
		<item>970</item>
		<item>975</item>
		<item>980</item>
		<item>985</item>
		<item>990</item>
		<item>995</item>
		<item>1000</item>
    </string-array>
	<string name="menu_preferences">Preferences</string>
	<string name="select_exercise">Select Exercise</string>
	<string name="select_weight">Select Weight</string>
	<string name="select_reps">Select Reps</string>
	<string name="record_results">Record Results</string>
	<string name="menu_exercise_video">Video</string>
	<string name="menu_exercise_picture">Picture</string>
	<string name="menu_exercise_text">Text</string>
	<string name="menu_previous_set">Previous Set</string>
	<string name="menu_next_set">Next Set</string>
	<string name="menu_last_set">Last Set</string>
	<string name="ic_menu_url">URL</string>
	<string name="menu_url">Show URL</string>
	<string name="menu_music">Play Music</string>
</resources>
