<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
		android:id="@+id/exercise_label"
		android:text="@string/exercise_label"
		
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
      />
     <Spinner 
        android:id="@+id/exercise_spinner"
        android:layout_below="@id/exercise_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_exercise"
    	/>
   
    <TextView
        android:id="@+id/title_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@id/exercise_spinner"
        />
    <Spinner 
        android:id="@+id/weight_spinner"
        android:layout_below="@id/title_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_weight"
    	/>
    <TextView
        android:id="@+id/body_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:layout_below="@id/weight_spinner"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
    <Spinner 
        android:id="@+id/reps_spinner"
        android:layout_below="@id/body_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_reps"
    	/>    
    <Button
        android:id="@+id/confirm" 
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reps_spinner"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
</RelativeLayout>
